# arxiv-podcast-bot

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: daily-podcast.yml
daily_papers/: 2026-05-27.md  2026-05-28.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-07.md  2026-07-08.md  (+16 more)
docs/: RANKING_SPEC.md  REAUTH.md  SETUP.md
feed/: podcast.xml
scripts/: export_storage_state.sh  local_test.py
src/: config.py  daily_archive.py  fetch_arxiv.py  generate_podcast.py  main.py  notify.py  publish.py  rank_papers.py  rss.py
state/: published_papers.json
tests/: test_daily_archive.py  test_fetch_arxiv.py  test_generate_podcast.py  test_jst_date.py  test_main.py  test_publish.py  test_rank_papers.py  test_rss.py
